<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mishenka.cookingmvvm.me.MeViewModel"
            />

    </data>

    <LinearLayout
        android:id="@+id/me_outer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp"
        android:gravity="center_horizontal"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="8dp">

        <TextView
            android:id="@+id/me_personal_space_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="#000000"
            android:shadowRadius="0.5"
            android:visibility="@{viewModel.elementsVisibility}"
            android:layout_marginBottom="8dp"
            android:text="@string/personal_space"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            />


        <androidx.cardview.widget.CardView
            android:id="@+id/me_avatar_card"
            android:visibility="@{viewModel.elementsVisibility}"
            android:layout_width="78dp"
            android:layout_height="78dp"
            app:cardCornerRadius="39dp">

            <ImageView
                android:id="@+id/iv_me_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:imageUri="@{viewModel.avatarUrl}"
                app:srcCompat="@color/browser_actions_title_color" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/me_name_text"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.username}"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_me_total_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="@{viewModel.elementsVisibility}"
            android:text="@{viewModel.totalViews}"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_me_total_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.elementsVisibility}"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.totalPosts}"
            android:textSize="16sp" />

        <Button
            android:id="@+id/me_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.signInButtonVisibility}"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_in"
            android:onClick="@{() -> viewModel.signIn()}"
            />

        <Button
            android:id="@+id/me_sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.signOutButtonVisibility}"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_out"
            android:onClick="@{() -> viewModel.signOut()}"
            />
    </LinearLayout>

</layout>